# learning-projects

./: .gitignore
c++/: README.md
c++/3DViewer/: .gitignore  Makefile  README.md  settings.ini
c++/3DViewer/Tests/: ReaderTest.h  TransformTest.h  filereader_tests.cc  transform_tests.cc
c++/3DViewer/docs/: Viewer3D.texi
c++/3DViewer/src/: CMakeLists.txt  Viewer3D.pro  main.cpp  settings.ini
c++/3DViewer/src/Controller/include/: Controller.h
c++/3DViewer/src/Controller/src/: Controller.cpp
c++/3DViewer/src/Geometry/include/: Edge.h  Figure.h  Scene.h  TransformMatrix.h  Vertex.h
c++/3DViewer/src/Geometry/src/: Edge.cpp  Figure.cpp  Scene.cpp  TransformMatrix.cpp  Vertex.cpp
c++/3DViewer/src/Model/include/: BaseFileReader.h  FacadeOperationResult.h  FileReader.h  ModelViewer3D.h
c++/3DViewer/src/Model/src/: FacadeOperationResult.cpp  FileReader.cpp  ModelViewer3D.cpp
c++/3DViewer/src/QtGifImage/: CMakeLists.txt
c++/3DViewer/src/View/include/: GifRecorder.h  QtSceneDrawer.h  SceneDrawerBase.h  StyleHelper.h  ViewSettings.h  mainwindow.h  mainwindow.ui
c++/3DViewer/src/View/src/: GifRecorder.cpp  QtSceneDrawer.cpp  StyleHelper.cpp  ViewSettings.cpp  mainwindow.cpp
c++/BrickGame/: Makefile  README.md  s21_test
c++/BrickGame/documentation/: documentation.html
c++/BrickGame/src/: main_cli.cpp
c++/BrickGame/src/_config/: config_snake.h  config_tetris.h
c++/BrickGame/src/brick_game/Common/: IGames.h  IState.h  fieldBase.h
c++/BrickGame/src/brick_game/snake/: snake.h  snakeModel.cpp  snakeModel.h  statesSnake.cpp  statesSnake.h
c++/BrickGame/src/brick_game/tetris/: shape.h  statesTetris.cpp  statesTetris.h  tetrisModel.cpp  tetrisModel.h
c++/BrickGame/src/controller/: controller.h
c++/BrickGame/src/gui/: IView.h
c++/BrickGame/src/gui/cli/: cliView.h
c++/BrickGame/src/gui/desktop/: CMakeLists.txt  main.cpp  qtview.cpp  qtview.h
c++/BrickGame/tests/: test_empty_snake.cpp  test_field.cpp  test_shape.cpp  test_snake.cpp  test_snakeModel.cpp  test_tetris.cpp
java/Bootcamp/: README.md
java/Bootcamp/T01/: README.md
java/Bootcamp/T01/src/exercise0/: build.gradle.kts
java/Bootcamp/T01/src/exercise0/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise1/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise10/src/main/java/com/example/: Main.java  User.java
java/Bootcamp/T01/src/exercise2/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise3/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise4/: build.gradle.kts
java/Bootcamp/T01/src/exercise4/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise5/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise6/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise7/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise8/src/main/java/com/example/: Main.java
java/Bootcamp/T01/src/exercise9/src/main/java/com/example/: Main.java
